fix: inputs overflowing their parent content

--- a/src/components/common/TuiInput.module.css
+++ b/src/components/common/TuiInput.module.css
@@ -20,7 +20,7 @@
   @apply relative inline-flex flex-1 rounded-lg overflow-hidden bg-tui-light-gray text-white;
 
   > input {
-    @apply pl-4 pr-10 py-2.5 flex-1 outline-none;
+    @apply pl-4 pr-10 py-2.5 w-full outline-none;
   }
 
   &:before {
